package otavio.machado;

public enum EstadoRodada {
    CRIADA,
    CARTAS_DISTRIBUIDAS,
    TURNO_DO_JOGADOR,
    TURNO_DO_DEALER,
    FINALIZADA
}
